opsiweb/uib-components/static/themes/opsi.css
/* ... */
.collapsing{
  position:relative;
  height:0;
  overflow:hidden;
  transition:height 0.35s ease
}
@media (prefers-reduced-motion:reduce){
  .collapsing{
      transition:none
  }
}
.dropdown,.dropleft,.dropright,.dropup{
  position:relative
}
.dropdown-toggle{
  white-space:nowrap
}
.dropdown-toggle::after{
  display:inline-block;
  margin-left:0.255em;
  vertical-align:0.255em;
  content:"";
  border-top:0.3em solid;
  border-right:0.3em solid transparent;
  border-bottom:0;
  border-left:0.3em solid transparent
}
.dropdown-toggle:empty::after{
  margin-left:0
}
.dropdown-menu{
  position:absolute;
  top:100%;
  left:0;
  z-index:1000;
  display:none;
  float:left;
  min-width:10rem;
  padding:0.5rem 0;
  margin:0.125rem 0 0;
  font-size:1rem;
  text-align:left;
  list-style:none;
  color:var(--fg-dropdown_menu);
  background-color:var(--bg-dropdown_menu);
  background-clip:padding-box;
  border:1px solid rgba(0,0,0,0.15);
  border-radius:0.25rem
}
.dropdown-menu-left{
  right:auto;
  left:0
}
.dropdown-menu-right{
  right:0;
  left:auto
}
@media (min-width:576px){
  .dropdown-menu-sm-left{
      right:auto;
      left:0
  }
  .dropdown-menu-sm-right{
      right:0;
      left:auto
  }
}
@media (min-width:768px){
  .dropdown-menu-md-left{
      right:auto;
      left:0
  }
  .dropdown-menu-md-right{
      right:0;
      left:auto
  }
}
@media (min-width:992px){
  .dropdown-menu-lg-left{
      right:auto;
      left:0
  }
  .dropdown-menu-lg-right{
      right:0;
      left:auto
  }
}
@media (min-width:1200px){
  .dropdown-menu-xl-left{
      right:auto;
      left:0
  }
  .dropdown-menu-xl-right{
      right:0;
      left:auto
  }
}
.dropup .dropdown-menu{
  top:auto;
  bottom:100%;
  margin-top:0;
  margin-bottom:0.125rem
}
.dropup .dropdown-toggle::after{
  display:inline-block;
  margin-left:0.255em;
  vertical-align:0.255em;
  content:"";
  border-top:0;
  border-right:0.3em solid transparent;
  border-bottom:0.3em solid;
  border-left:0.3em solid transparent
}
.dropup .dropdown-toggle:empty::after{
  margin-left:0
}
.dropright .dropdown-menu{
  top:0;
  right:auto;
  left:100%;
  margin-top:0;
  margin-left:0.125rem
}
.dropright .dropdown-toggle::after{
  display:inline-block;
  content:"";
  border-top:0.3em solid transparent;
  border-right:0;
  border-bottom:0.3em solid transparent;
  border-left:0.3em solid;
  vertical-align:0;
  margin-left:0
}
.dropleft .dropdown-menu{
  top:0;
  right:100%;
  left:auto;
  margin-top:0;
  margin-right:0.125rem
}
.dropleft .dropdown-toggle::after{
  margin-left:0.255em;
  vertical-align:0.255em;
  content:"";
  display:none
}
.dropleft .dropdown-toggle::before{
  display:inline-block;
  margin-right:0.255em;
  content:"";
  border-top:0.3em solid transparent;
  border-right:0.3em solid;
  border-bottom:0.3em solid transparent;
  vertical-align:0
}
.dropleft .dropdown-toggle:empty::after{
  margin-left:0
}
.dropdown-menu[x-placement^="bottom"],.dropdown-menu[x-placement^="left"],.dropdown-menu[x-placement^="right"],.dropdown-menu[x-placement^="top"]{
  right:auto;
  bottom:auto
}
.dropdown-divider{
  height:0;
  margin:0.5rem 0;
  overflow:hidden;
  border-top:1px solid #e9ecef
}
.dropdown-item{
  display:block;
  width:100%;
  padding:0.25rem 1.5rem;
  clear:both;
  font-weight:400;
  color:var(--fg-dropdown_item);
  background-color:var(--bg-dropdown_item);
  text-align:inherit;
  white-space:nowrap;
  border:0
}
.dropdown-item:focus,.dropdown-item:hover{
  color:var(--fg-dropdown_item-hover);
  background-color:var(--bg-dropdown_item-hover);
  text-decoration:none
}
.dropdown-item.active,.dropdown-item:active{
  text-decoration:none;
  background-color:var(--bg-dropdown_item-active);
  color:var(--fg-dropdown_item-active)
}
.dropdown-item.disabled,.dropdown-item:disabled{
  color:var(--fg-dropdown_item-disabled);
  pointer-events:none;
  background-color:transparent
}
.dropdown-menu.show{
  display:block
}
.dropdown-header{
  display:block;
  padding:0.5rem 1.5rem;
  margin-bottom:0;
  font-size:0.875rem;
  color:var(--fg-dropdown_header);
  white-space:nowrap
}
.dropdown-item-text{
  display:block;
  padding:0.25rem 1.5rem;
  color:var(--fg-dropdown_item);
  background-color:var(--bg-dropdown_item)
}
.btn-group,.btn-group-vertical{
  position:relative;
  display:inline-flex;
  vertical-align:middle
}
.btn-group-vertical > .btn,.btn-group > .btn{
  position:relative;
  flex:1 1 auto
}
.btn-group-vertical > .btn:hover,.btn-group > .btn:hover{
  z-index:1
}
.btn-group-vertical > .btn.active,.btn-group-vertical > .btn:active,.btn-group-vertical > .btn:focus,.btn-group > .btn.active,.btn-group > .btn:active,.btn-group > .btn:focus{
  z-index:1
}
.btn:not(.disabled):not(.border-0),.btn:not(.border-0){
  border:1px solid var(--border) !important
}
.btn:disabled,.btn.disabled{
  color:var(--fg-page_item-disabled) !important;
  background-color:var(--bg-page_item-disabled) !important;
  border-color:var(--b-page_item-disabled) !important
}
.btn-toolbar{
  display:flex;
  flex-wrap:wrap;
  justify-content:flex-start
}
.btn-toolbar .input-group{
  width:auto
}
.btn-group > .btn-group:not(:first-child),.btn-group > .btn:not(:first-child){
  margin-left:-1px
}
.btn-group > .btn-group:not(:last-child) > .btn,.btn-group > .btn:not(:last-child):not(.dropdown-toggle){
  border-top-right-radius:0;
  border-bottom-right-radius:0
}
.btn-group > .btn-group:not(:first-child) > .btn,.btn-group > .btn:not(:first-child){
  border-top-left-radius:0;
  border-bottom-left-radius:0
}
.dropdown-toggle-split{
  padding-right:0.5625rem;
  padding-left:0.5625rem
}
.dropdown-toggle-split::after,.dropright .dropdown-toggle-split::after,.dropup .dropdown-toggle-split::after{
  margin-left:0
}
.dropleft .dropdown-toggle-split::before{
  margin-right:0
}
.btn-group-sm > .btn + .dropdown-toggle-split,.btn-sm + .dropdown-toggle-split{
  padding-right:0.375rem;
  padding-left:0.375rem
}
/* ... */

